<resources>
    <string name="app_name">PhotoStore</string>
    <string name="showuploads">Show Uploads</string>
    <string name="filenameEditTextHint">Enter   File  Name</string>
    <string name="home_btn">Home  Page</string>
    <string name="photo_store_name">Photo Store</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="photo_store">Photo Store</string>
    <string name="title_activity_user_account">UserAccountActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sure_to_delete">Are you sure you want to delete ??</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="photo_editor">Photo Editor</string>
    <string name="video_editor">Video Editor</string>
    <string name="follow_us">Follow Us</string>
    <string name="premium_features">Premium Features</string>
    <string name="video_lessons">Video Lessons</string>
    <string name="editors_workspaces">Editors\' WorkSpaces</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="real_talk">RealTalk</string>
    <string name="rate_app">Rate App</string>
    <string name="profile">Profile</string>
</resources>